--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,6 @@
         <item name="android:windowExitAnimation">@anim/translate_dialog_out</item>
     </style>
 
+    <style name="Translucent" parent="android:style/Theme.Translucent.NoTitleBar"/>
+
 </resources>
